fix: overflowing pnl, roe card

--- a/bnetex-new/src/modules/terminal/investor/investorView.module.scss
+++ b/bnetex-new/src/modules/terminal/investor/investorView.module.scss
@@ -2,7 +2,7 @@
 @import 'styles/mixins';
 
 .toggle-section-card {
-  height: 280px;
+  min-height: 282px;
 }
 
 .investor-view-wrapper__header {
@@ -51,6 +51,8 @@
   grid-column: 2;
   grid-row: 3;
   width: 100%;
+  // 100vw right col - left/right pad (16 + 16) - gap (16px)
+  max-width: calc(100vw - 448px);
 
   @include max-width(1200) {
     grid-column: 1;
@@ -59,12 +61,18 @@
 
   @include max-width(800) {
     grid-row: 4;
+    max-width: calc(100vw - 32px);
+  }
+
+  @include mobile {
+    max-width: calc(100vw - 16px);
   }
 }
 
 .ROE-card {
   grid-row: 4;
   width: 100%;
+  max-width: calc(100vw - 448px);
 
   @include max-width(1200) {
     grid-column: 1;
@@ -73,6 +81,11 @@
 
   @include max-width(800) {
     grid-row: 5;
+    max-width: calc(100vw - 32px);
+  }
+
+  @include mobile {
+    max-width: calc(100vw - 16px);
   }
 }
 
